--- a/src/components/shared/Global/global.scss
+++ b/src/components/shared/Global/global.scss
@@ -127,7 +127,7 @@ body {
 }
 
 #isActiveBox{
-  border-bottom: 5px solid var(--border-color);
+  border-bottom: 5px solid var(--button-bg);
   font-family: "Markprobold";
 }
 
