Quiz Purchase Modal + Responsivity
Created Quiz Purchasing Modal + fixing responsivity on Code.Js

--- a/src/components/pages/Play/Code/Code.module.scss
+++ b/src/components/pages/Play/Code/Code.module.scss
@@ -71,7 +71,7 @@
       &_cta {
         font-family: "Integral CF Demi Bold";
         width: 100%;
-        margin-left: 1em;
+        // margin-left: 1em;
         font-size: 1.1em;
         padding: 1em 1.9em;
         background: var(--button-bg);
@@ -88,7 +88,7 @@
       &_back {
         font-family: "Integral CF Demi Bold";
         width: 100%;
-        margin-left: 1em;
+        //  margin-left: 1em;
         font-size: 1.1em;
         padding: 1em 1.9em;
         background: #fedf60;
