--- a/src/components/pages/Dashboard/EditProfilScreen/ProfileScreen.scss
+++ b/src/components/pages/Dashboard/EditProfilScreen/ProfileScreen.scss
@@ -94,7 +94,7 @@ textarea#multiline-flexible {
    display: flex;
    width: 100%;
 }
-form {
+.form {
    padding: 15px;
 }
 .container-fluid {
@@ -119,7 +119,7 @@ form {
    .container-fluid {
       max-width: 92%;
    }
-   form {
+   .form {
       box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
       padding: 15px;
    }
