--- a/src/components/pages/Dashboard/Quiz/Quiz.module.scss
+++ b/src/components/pages/Dashboard/Quiz/Quiz.module.scss
@@ -81,7 +81,6 @@
 
     &:hover {
         background: rgba(141, 141, 141, 0.02);
-
     }
 
     position: relative;
@@ -116,6 +115,7 @@
 
 .header_container {
     padding: 1em;
+    overflow-y: scroll;
 }
 
 .empty_text {
@@ -173,9 +173,9 @@
     fill: var(--text-color);
 }
 
-.notification_title{
+.notification_title {
     font-size: 1.25em;
-    margin-left: .5em;
+    margin-left: 0.5em;
     font-weight: 600;
 }
 
@@ -192,7 +192,7 @@
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     background: transparent;
-    transition: .3s all ease-in-out;
+    transition: 0.3s all ease-in-out;
     cursor: pointer;
 
     &:hover {
@@ -201,12 +201,17 @@
 }
 
 .publish_options {
+    border-top: 2px solid var(--border-color);
     width: 92%;
     position: absolute;
-    bottom: 1em;
-    right: 1em;
+    padding-top: 1em;
+    padding-right: 1em;
+    padding-bottom: 1em;
     display: flex;
+    bottom: 0;
+    right: 1em;
     justify-content: space-between;
+    background: var(--background-important)
 }
 
 .current_question {
@@ -217,18 +222,13 @@
     align-items: center;
     border-radius: 0.75em;
     border: 2px solid var(--border-color);
-    position: relative;
+    overflow-wrap: break-word;
     word-wrap: break-word;
+    hyphens: auto;
 }
 
 .current_question_input {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    word-wrap: break-word;
+    width: 90%;
     font-size: 2.75em;
     text-align: center;
     font-family: "Poppins", sans-serif;
@@ -236,13 +236,21 @@
     border: 0;
     background: transparent;
     transition: 0.3s ease-in-out all;
-    white-space: pre-wrap;
-    overflow: scroll;
     color: var(--text-color);
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+    resize: none;
 
     &::placeholder {
-        color: var(--text-color);
         opacity: 0.7;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &:focus {
+        height: 70%;
     }
 }
 
@@ -424,7 +432,7 @@
     color: var(--text-color);
 
     &:active {
-        border: 0.5px solid rgba(125, 99, 196, 0.314);
+        border: 2px solid rgba(125, 99, 196, 0.314);
     }
 
     &:hover {
@@ -471,7 +479,7 @@
     right: 0.75em;
 }
 
-.goback{
+.goback {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -480,41 +488,41 @@
     cursor: pointer;
     position: relative;
 }
-.gobackbtn{
+.gobackbtn {
     position: absolute;
     left: 0;
-
 }
 
-.notification{
+.notification {
     position: absolute;
-    top: 1em; right: 1em;
+    top: 1em;
+    right: 1em;
     z-index: 12;
-    width: 320px; height: auto;
+    width: 320px;
+    height: auto;
     height: auto;
     border: 2px solid var(--border-color);
     border-radius: 1em;
     background: var(--background-important);
 }
 
-.nothead{
-    padding: .35em 1em;
+.nothead {
+    padding: 0.35em 1em;
     display: flex;
     align-items: center;
 }
 
-.notspace{
+.notspace {
     width: 100%;
     height: 2px;
-    background: var(--border-color)
+    background: var(--border-color);
 }
 
-.notbody{
+.notbody {
     padding: 1em;
-
 }
 
-.publishing{
+.publishing {
     width: 100%;
     height: 90vh;
     display: flex;
@@ -522,17 +530,48 @@
     align-items: center;
 }
 
-.question_side{
+.question_side {
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     border: 2px solid var(--border-color);
     border-radius: 25px;
-    
+
+    padding: 1em;
     font-size: 1.1em;
+    margin-bottom: .75em;
 
-    margin-top: .75em;
+    margin-top: 0.75em;
 
-    &:last-child{
+    &:last-child {
         margin-top: 0em;
+        margin-bottom: 5em;
     }
+}
+
+.navicon_text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.boxes{
+    margin-bottom: .75em;
+    cursor: pointer;
+}
+
+.questiont_list{
+    width: 100%;
+    display: flex;
+    flex-direction: column
+}
+
+.linee{
+    width: 100%;
+    height: 2px;
+}
+
+.detailed_questions{
+    width: 100%;
+    text-align: center;
 }
