--- a/src/components/shared/Loaders/Loaders.module.scss
+++ b/src/components/shared/Loaders/Loaders.module.scss
@@ -5,3 +5,16 @@
     justify-content: center;
     align-items: center;
 }
+
+.absoloader_container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: var(--background-less-important);
+    z-index: 12323;
+    top: 0;
+    left: 0;
+}
