--- a/src/components/pages/Dashboard/Quiz/Quiz.module.scss
+++ b/src/components/pages/Dashboard/Quiz/Quiz.module.scss
@@ -177,6 +177,7 @@
     font-size: 1.25em;
     margin-left: 0.5em;
     font-weight: 600;
+    color: var(--text-color)
 }
 
 .publish_cta {
@@ -520,6 +521,7 @@
 
 .notbody {
     padding: 1em;
+    color: var(--text-color)
 }
 
 .publishing {
