--- a/src/components/pages/Dashboard/Leaderboard/Leaderboard.module.scss
+++ b/src/components/pages/Dashboard/Leaderboard/Leaderboard.module.scss
@@ -169,6 +169,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 0.75em 0.75em 0em 0em;
+    font-size: 1.5em;
+    font-weight: 900;
 }
 
 .rightScene {
@@ -179,6 +181,8 @@
     justify-content: center;
     align-items: center;
     border-start-end-radius: 0.75em;
+    font-size: 1.5em;
+    font-weight: 900;
 }
 
 .rightrightScene {
@@ -189,6 +193,14 @@
     justify-content: center;
     align-items: center;
     border-start-end-radius: 0.75em;
+    font-size: 1.5em;
+    font-weight: 900;
+}
+
+.specific{
+    font-size: 1.5em;
+    font-weight: 900;
+    color: var(--text-color)
 }
 
 .profilePinnedCenter {
