--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -134,8 +134,9 @@
 }
 
 .actions_bar_icon{
-    width: 1em;
-    border: 100px;
+    width: 1.25em;
+    height: 1.25em;
+    border-radius: 100px;
     margin-left: .65em;
     border: 2px solid var(--background-less-important);
 }
